# steamid

./: Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yaml
c-api/: Cargo.toml  build.rs
c-api/src/: lib.rs
src/: error.rs  lib.rs  macros.rs  raw.rs
src/parts/: account_id.rs  account_number.rs  account_type.rs  auth_server.rs  chat_flags.rs  instance.rs  mod.rs  universe.rs
