[package]
name = "steamid"
version = "0.1.2"
authors = ["John Peel <john@dgby.org>"]
categories = ["no-std"]
description = "Steam ID type and accessories"
documentation = "https://johnpeel.github.io/steamid-rs/steamid/"
edition = "2021"
keywords = ["steam", "steamid", "steam-id"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JohnPeel/steamid-rs"

[features]
default = ["std"]

std = ["displaydoc/std"]

[dependencies]
displaydoc = { version = "0.2", default-features = false }
paste = "1"

[workspace]
members = ["c-api"]
